# bmstu-modeling

./: pyproject.toml
lab_01/: main.py
lab_01/distributions/: __init__.py  exponental.py  uniform.py
lab_02/: algs.py  main.py  view.py
lab_03/: algs.py  main.py  test.ipynb
lab_04/: distributions.py  event_model.py  main.py  step_model.py
lab_05/: main.py
lab_06/: .env  main.py
