[tool.poetry]
name = "modeling"
version = "0.1.0"
description = ""
authors = ["ivaaahn <ivahnencko01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.5.0"
click = "^8.1.3"
jupyter = "^1.0.0"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']